--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=, initial-scale=1.0"/>
     <title>RESIDENT-EVIL-PAGE</title>
-    <link rel="shortcut icon" href="src/imagens/Capcom.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="src/imagens/Logo-capcom" type="image/x-icon"/>
 <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet"/>
 <link rel="stylesheet" href="./src/css/reset.css">
 <link rel="stylesheet" href="./src/css/estilos.css">
