--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <audio autoplay="autoplay"><source src="./src/Resident Evil 4 Remake Tema.mp3" type="audio/mp3" /></audio>
+    <audio autoplay="autoplay" controls="controls"><source src="./src/Resident Evil 4 Remake Tema.mp3" type="audio/mp3" /></audio>
     
     <header class="cabecalho">
         <div class="logo">
